Adding fallback functionality for not found or non-kbuc domains

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ BITCOIN_RPC_PASSWORD=your_rpc_password
 # Cache Configuration
 DOMAIN_CACHE_TTL=3600  # Time in seconds for domain cache entries
 NOT_FOUND_CACHE_TTL=1800  # Time in seconds for not found cache entries
+
+REFRESH_INTERVAL_MINUTES=15
+
+# Default IP Configuration
+DEFAULT_IP=0.0.0.0  # Default IP address to return when domain has no valid IP set
